--- a/css/style.less
+++ b/css/style.less
@@ -65,27 +65,52 @@ td { vertical-align: top; }
 /* ==|== primary styles =====================================================
    Author: Christopher Esplin
    ========================================================================== */
+/*	Colors	*/
+@white: hsla(0, 0%, 100%, 1);
+@peach: hsla(33, 80%, 66%, 1);
+@green: hsl(136, 30%, 48%, 1);
+@red: hsla(356, 50%, 54%, 1);
+@gray: hsla(0, 0%, 20%, 1);
+@grayTransparent: hsla(0, 0%, 100%, 0.30);
 
-a {
-	text-decoration: none;
-	color: #FFFFFF;
+/*	Fonts	*/
+@font-face {
+  font-family: 'Rokkitt';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rokkitt'), url('http://themes.googleusercontent.com/static/fonts/rokkitt/v5/RcB7dRNAX_8JE8zinU47YALUuEpTyoUstqEm5AMlJo4.woff') format('woff');
+}
+@font-face {
+  font-family: 'Hammersmith One';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Hammersmith One'), local('HammersmithOne'), url('http://themes.googleusercontent.com/static/fonts/hammersmithone/v3/FWNn6ITYqL6or7ZTmBxRhgaS65eljNVkG0R6HbhLwtY.woff') format('woff');
+}
+
+@hammersmith: 'Hammersmith One';
+@rokkitt: 'Rokkitt', Helvetica, Arial;
+
+/*	General	*/
+a, a:visited {
+/*	text-decoration: none;*/
+	color: @white;
 }
 h1, h2 {
-	font-family: "Hammersmith One";
+	font-family: @hammersmith;
 	text-transform: uppercase;
 }
 h2 {
 	margin: 0;
 }
 body, .bio-block, .portfolio-block, #portfolio h1 {
-	background: #FFFFFF;
+	background: @white;
 	background: url("http://images.christopheresplin.com/background.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     margin: 0;
-    font-family: Rokkitt, Helvetica, Arial;
+    font-family: @rokkitt;
 }
 header {
 	font-size: 2em;
@@ -93,12 +118,12 @@ header {
     padding: 0.5em 0;
     width: 100%;
     height: 2em;
-    background: #FFFFFF;
+    background: @white;
 	background: rgba(0, 0, 0, .7);
-	color: #FFFFFF;
+	color: @white;
 	text-transform: uppercase;
 	letter-spacing: 0.05em;
-	font-family: "Hammersmith One"
+	font-family: @hammersmith;
 }
 header h1 {
 	float: left;
@@ -109,39 +134,39 @@ header h1 {
 #header-container {
 	width: 55em;
 	margin: auto;
-}
-#header-container img {
-    left: 0.25em;
-    position: relative;
-    top: -3em;
-    width: 7.5em;
+	img {
+	    left: 0.25em;
+	    position: relative;
+	    top: -3em;
+	    width: 7.5em;		
+	}
 }
 nav {
 	float: right;
-	margin-top: 0.5em;
-}
-nav ul {
-	margin: 0;
-	text-align: center;
-}
-nav li {
-	display: inline;
-	list-style-type: none;
-	margin: 0 0 0 1em;
-}
-nav ul li:nth-child(1) a {
-	color: #EEAF63;
-}
-nav ul li:nth-child(2) a {
-	color: #569F69;
-}
-nav ul li:nth-child(3) a {
-	color: #C44D54;
+	margin: 0.5em 0.5em 0 0;
+	ul {
+		margin: 0;
+		text-align: center;
+		li:nth-child(1) a {
+			color: @peach;
+		}
+		li:nth-child(2) a {
+			color: @green;
+		}	
+		li:nth-child(3) a {
+			color: @red;
+		}
+	}
+	li {
+		display: inline;
+		list-style-type: none;
+		margin: 0 0 0 1em;		
+	}
 }
 section {
 	width: 100em;
-	background: #333333;
-	background: rgba(255, 255, 255, .3);
+	background: @gray;
+	background: @grayTransparent;
 	padding: 5em;
 	margin: 0 auto 1em auto;
 }
@@ -149,12 +174,12 @@ section {
 	margin-bottom: 1em;
 	padding-top: 2em;
 	padding-bottom: 2em;
-}
-#bio img{
-	position: relative;
-	top: 0em;
-	left: 0em;
-	width: 100em;
+	img{
+		position: relative;
+		top: 0em;
+		left: 0em;
+		width: 100em;
+	}
 }
 #bio p, .blurb p {
 	padding-left: 1em;
@@ -178,37 +203,53 @@ section {
 }
 .blurb {
 	background: rgba(0, 0, 0, .7);
-}	
-#portfolio h1 {
-	font-size: 3em;
-    margin: 0 0 0 1em;
-    padding: 0.66em;
-    width: 30em;
+	height: 6em;
+	display: none;
 }
-#portfolio a {
-	color: #333333;
-	float: right;
-}
+#portfolio {
+	h1 {
+		font-size: 3em;
+	    margin: 0 0 0 1em;
+	    padding: 0.66em;
+	    width: 30em;
+	}
+	a {
+		color: @gray;
+		float: right;
+	}
+}	 
 .blurb {
 	margin-top: 1em;
 	margin-bottom: 0;
-}
-.blurb h1 {
-	font-size: 2em;
-}
+	h1 {
+		font-size: 2em;
+	}
+} 
 .portfolio-block {
 	height: 7.5em;
 }
 #portfolio-1 {
-	background: url("http://images.christopheresplin.com/melissaesplin.com.png") no-repeat 0% 0%;
+	background: url("http://images.christopheresplin.com/lime.png") no-repeat 0% 0%;
 }
 #portfolio-2 {
-	background: url("http://images.christopheresplin.com/scorpionsurvival.com.png") no-repeat 0% 0%;
+	background: url("http://images.christopheresplin.com/lime-mobile.png") no-repeat 0% 0%;
 }
 #portfolio-3 {
-	background: url("http://images.christopheresplin.com/vex.png") no-repeat 0% 0%;
+	background: url("http://images.christopheresplin.com/crm.png") no-repeat 0% 0%;
 }
 #portfolio-4 {
+	background: url("http://images.christopheresplin.com/cordell.png") no-repeat 0% 0%;
+}
+#portfolio-5 {
+	background: url("http://images.christopheresplin.com/muffin.png") no-repeat 0% 0%;
+}
+#portfolio-6 {
+	background: url("http://images.christopheresplin.com/melissaesplin.com.png") no-repeat 0% 0%;
+}
+#portfolio-7 {
+	background: url("http://images.christopheresplin.com/vex.png") no-repeat 0% 0%;
+}
+#portfolio-8 {
 	background: url("http://images.christopheresplin.com/vex-2.png") no-repeat 0% 0%;
 }
 footer {
@@ -221,25 +262,38 @@ footer {
 	bottom: -4.5em;
     position: relative;
     right: 0;
+    a {
+    	float: right;
+		color: @white;
+		text-decoration: none;
+    }
 }
-#attribution a {
-	float: right;
-	color: #FFFFFF;
-	text-decoration: none;
+.bio-block {
+	h2 {
+		margin: 2em 0 0 0;
+	}
+	p {
+		margin: 0 1em;
+	}
+	ul {
+		list-style: none;
+	}
+	li {
+
+	}
 }
-/* Clearfix */
-.clearfix:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-     }
-.clearfix { display: inline-block; }
-/* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
+.bio-block > ul > li {
+	display: block;
+	float: left;
+	margin-right: 1.5em;
+	text-transform: uppercase;
+	ul {
+		width: 7em;
+		padding: 0 1em;
+		text-transform: none;
+		margin: .5em 0;
+	}
+}
 
 
 /* ==|== non-semantic helper classes ======================================== */
